--- a/styles/home-main.css
+++ b/styles/home-main.css
@@ -17,7 +17,7 @@
 body {
   background-color: #e5e5e5;
   color: black;
-  min-width: 350px;
+  min-width: 300px;
 }
 
 /*HEADER*/
@@ -69,13 +69,19 @@ p, li {
   text-decoration: underline;
 }
 
+.header__nav li {
+  display: block;
+  margin: 16px;
+}
+
 ul {
   list-style: none;
   padding-left: 0;
 }
 
-ul li {
-    display: inline;
+main ul li {
+  display: block;
+  margin: 31px 0;
 }
 
 .header__search {
@@ -109,7 +115,7 @@ header button {
 h3 {
   font-size: 18px;
   border-bottom: 2px #69696994 solid;
-  margin: 20px auto;
+  margin: 0 auto;
   padding: 10px;
 }
 
@@ -120,21 +126,25 @@ h3 {
 }
 
 .main__subtitle h3 {
-  margin-bottom: 27px
+  margin: 20px 16%;
 }
 
 .main__subtitle {
   text-align: center;
-  padding: 53px 10%;
+  padding: 25px 0;
 }
 
 .main__subtitle__link,
 .main__what-is__link {
-  font-size: 13px;
+  font-size: 14px;
   border: 2px #696969 solid;
   padding: 5px;
   margin: 0 16px;
   color: black;
+}
+
+.main__what-is__link {
+  margin: 13px 16px;
 }
 
 .main__subtitle__link:hover,
@@ -151,11 +161,11 @@ h3 {
 
 .main__collage {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-gap: 15px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr); 
   height: 300px;
-  margin: 15px 5%;
+  grid-gap: 0;
+  margin: 0;
 }
 
 .main__collage__image {
@@ -164,47 +174,42 @@ h3 {
   opacity: .7;
 }
 
-.main-image1 {
-  grid-column: 1 / 2;
-  grid-row: 1 / 3;
-}
+  .main-image1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
 
-.main-image2 {
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
-}
+  .main-image2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  
+  .main-image3 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  
+  .main-image4 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
 
-.main-image3 {
-  grid-column: 2 / 3;
-  grid-row: 2 / 4;
-}
+  .main-image5 {
+    display: none;
+  }
 
-.main-image4 {
-  grid-column: 3 / 4;
-  grid-row: 1 / 3;
-}
-
-.main-image5 {
-  grid-column: 1 / 2;
-  grid-row: 3 / 4;
-}
-
-.main-image6 {
-  grid-column: 3 / 4;
-  grid-row: 3 / 4;
-}
+  .main-image6 {
+    display: none;
+  }
 
 /*WHAT IS SECTION*/
 
 .main__what-is {
   text-align: center;
-  padding: 10px 15% 53px 15%;
+
+  padding: 53px 4% 53px 4%;
+  10px 15% 53px 15%;
 }
-
-.main__what-is__link {
-
-}
-
 
 /*ACCESS DATA*/
 .main__data {
@@ -215,14 +220,13 @@ h3 {
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
-  padding: 50px 15%;
+  padding: 5px 6%;
   background-position: bottom;
-
 }
 
 .main__data h3 {
   margin: 20px auto;
-  width: 35%;
+  width: 65%;
 }
 
 .drop-shadow-text-box {
@@ -239,26 +243,10 @@ h3 {
 
 .ways-to-access-data {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-gap: 20px;
-  height: 250px;
+  height: 560px;
 }
-
-/*.nsrdb-viewer {
- background: url('../images/data-set-1.png');
- background-size: cover;
-}
-
-.nsrdb-api {
-  background: url('../images/data-set-2.png');
-  background-size: cover;
-}
-
-.globus-data {
-  background: url('../images/data-set-3.png');
-  background-size: cover;
-}*/
-
 
 article {
   background: linear-gradient(
@@ -276,16 +264,14 @@ article:hover {
     rgba(212, 212, 212, 0.6),
     rgba(194, 192, 192, 0.8)),
     url('../images/solar-panel.jpeg')
-/*  background-size: cover;
-  background-repeat: no-repeat;*/
-
 }
 
 article h1 {
   font-size: 18px;
   background-color: #9a9898c2;
-  padding: 24px 44px;
+  padding: 24px 13px;
   position: absolute;
+  width: 100%;
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -298,17 +284,21 @@ h4 {
   padding: 16px;
 }
 
+.data-show {
+  opacity: 0
+}
+
 .data-hide {
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-  opacity: 0;
+  opacity: 1;
   transition: 1s ease;
 }
 
-.nsrdb-viewer:hover .data-hide,
+/*.nsrdb-viewer:hover .data-hide,
 .nsrdb-api:hover .data-hide,
 .globus-data:hover .data-hide {
   opacity: 1;
@@ -318,7 +308,7 @@ h4 {
 .nsrdb-api:hover .data-show,
 .globus-data:hover .data-show {
   opacity: 0;
-}
+}*/
 
 .data-hide p {
   color: black;
@@ -327,6 +317,7 @@ h4 {
   text-align: center;
   background-color: #9a9898c2;
   padding: 5px;
+  margin: 0;
 }
 
 .data-hide a {
@@ -335,19 +326,18 @@ h4 {
 
 .data-hide button {
   position: absolute;
+  width: 200px;
   bottom: 2%;
   left: 50%;
   transform: translate(-50%, 0%);
 }
 
 .compatability li {
-  font-size: 12px;
+  font-size: 14px;
   border: 2px #696969 solid;
   padding: 5px;
-  margin: 0 20%;
-/*  color: black;*/
+  margin: 13px 20%;
   display: block;
-/*  letter-spacing: 0;*/
 }
 
 .compatability a {
@@ -364,7 +354,7 @@ h4 {
 /*CONTRIBUTORS*/
 .main__contributors {
   text-align: center;
-  padding: 53px 15%;
+  padding: 53px 4%;
 }
 
 .main__contributors a {
@@ -375,68 +365,44 @@ h4 {
 .main__contributors li {
   list-style-type: square;
   display: block;
+  margin: 0 20%;
 }
 
 
 /*IMAGE ROW*/
 .main__image-row {
-  height: 200px;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  opacity: .7;
+  display: none;
 }
 
-.main__image-row__image {
-  height: 100%;
-  width: 100%;
+
+footer {
+  padding: 10px 0;
 }
 
-@media screen and (max-width: 845px) {
+footer li {
+  display: inline;
+}
+
+@media screen and (min-width: 450px) {
 
   .main__what-is {
-/*    height: 300px;*/
+    padding: 10px 15% 53px 15%;
   }
-
-  .header {
-/*    height: 400px;*/
-  }
-
-  .header__search__input {
-    height: 1.6em;
-  }
-
-  .main__data {
-/*    height: 287px;*/
-  }
-
-}
-
-@media screen and (max-width: 705px) {
-
-  .header {
-/*    height: 350px;*/
-  }
-
-
-  .header__nav__link {
-    margin: 40px 30px;
-  }
-
-
 
   .main__collage {
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    width: 100%;
-    grid-gap: 20px;
-/*    height: 300px;*/
-/*    margin: 0;*/
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 15px;
+    height: 300px;
+    margin: 15px 5%;
   }
-
+  
   .main-image1 {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
   }
-
+  
   .main-image2 {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
@@ -451,128 +417,108 @@ h4 {
     grid-column: 3 / 4;
     grid-row: 1 / 3;
   }
-
-  .main__what-is {
-/*    height: 260px;*/
-    padding: 37px 15%;
-  }
-
-  .main__data {
-/*    height: 300px;*/
-  }
-
-}
-
-@media screen and (max-width: 585px) {
-  .header__nav__link {
-    margin: 36px 25px;
+  
+  .main-image5 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    display: inherit;
   }
   
-  .main__what-is {
-/*    height: 322px;*/
+  .main-image6 {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    display: inherit;
   }
 
-  .main__data {
-/*    height: 290px;*/
-    padding: 40px 15%;
-  }
-
-  .main__contributors {
-    padding: 39px 15%;
+  .ways-to-access-data {
+    height: 440px;
   }
 }
 
-@media screen and (max-width: 490px) {
+@media screen and (min-width: 545px) {
 
-  .header h2 {
-    padding: 40px 0 20px 0;
-  }
-
-  .header li {
-    display: block;
-    padding: 10px;
-  }
-
-  .header__search {
-    margin-top: 17px;
-}
-
-  .main__subtitle {
-    margin: 40px 0;
-  }
-
-  .main__subtitle li {
-    display: block;
-    padding: 16px;
-  }
-
-  .main__subtitle h3 {
-    margin-bottom: 18px;
-  }
-
-  .main__collage {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr); 
-    grid-gap: 0;
+  .header__nav li {
+    display: inline-block;
     margin: 0;
-}
-
-  .main-image1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
   }
 
-  .main-image2 {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-  }
-  
-  .main-image3 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-  }
-  
-  .main-image4 {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
+  .header__nav__link {
+    margin: 39px 18px;
   }
 
-  .main__what-is {
-/*    height: 370px;*/
+  .main__data h3 {
+    width: 35%;
   }
 
-  .main__data {
-/*    height: 350px;*/
-    padding: 40px 15%;
+  .ways-to-access-data {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    height: 250px;
   }
 
-  .main__contributors {
-    padding: 39px 15%;
+  .data-hide p {
+    font-size: 12px;
+    padding: 0;
+    margin: 7px;
+  }
+
+  .data-show {
+    opacity: 1;
+  }
+
+  .data-hide {
+    opacity: 0;
+  }
+
+  .nsrdb-viewer:hover .data-hide,
+  .nsrdb-api:hover .data-hide,
+  .globus-data:hover .data-hide {
+    opacity: 1;
+  }
+
+  .nsrdb-viewer:hover .data-show,
+  .nsrdb-api:hover .data-show,
+  .globus-data:hover .data-show {
+    opacity: 0;
   }
 
   .main__image-row {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .main__button {
-    display: block;
-    margin: auto;
+    height: 200px;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    opacity: .7;
   }
 
-  .main__subtitle h3 {
-    margin: 0 10px 18px 10px;
+  .main__image-row__image {
+    height: 100%;
+    width: 100%;
   }
 
   .main__contributors {
-    padding: 33px 15%;
-/*    height: 210px;*/
+    padding: 53px 15%; 
+  }
+}
+
+@media screen and (min-width: 770px) {
+  .header__nav__link {
+    margin: 39px 50px;
+  }
+
+  ul li {
+    display: inline;
+    margin: 0;
   }
 
   .main__data {
-/*    height: 300px;*/
-    padding: 40px 15%;
+    padding: 50px 15%;
   }
 
+  .data-hide p {
+    font-size: 13px;
+    margin: 10px;
+  }
+
+/*  .main__what-is__link {
+    margin: 0px 16px;
+  }*/
 }
