--- a/styles/TMY-page.css
+++ b/styles/TMY-page.css
@@ -14,26 +14,12 @@
   margin: 30px 0;
 }
 
-.what-is-TMY__section {
+.footer_image {
   background: linear-gradient(
     rgba(212, 212, 212, 0.2),
     rgba(194, 192, 192, 0.5)),
-    url('../images/nyc-night.jpg');
-   background-position: center;
-}
-
-.TMY-data-format__section {
-  background: linear-gradient(
-    rgba(212, 212, 212, 0.2),
-    rgba(194, 192, 192, 0.5)),
-    url('../images/panels.jpg');
-  background-position: bottom;
-}
-
-.what-is-TMY__section,
-.TMY-data-format__section {
-  background-repeat: no-repeat;
-  background-size: cover;
+    url('../images/andreas-gucklhorn.jpg');
+    height: 250px;
 }
 
 @media screen and (min-width: 800px) {
